assets/stylesheets/assigns.scss
.user-content {
  .assign-controls {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 0.5em;

    .assign-messages-assigned {
      margin-right: 0.5em;
    }
  }
}

.assigned-to {
  .d-icon,
  i.fa {
    margin-right: 0.25em;
    color: var(--primary-medium, $primary-medium);
  }
  .assign-text {
    margin-right: 0.25em;
  }
}

.topic-body {
  .assigned-to {
    padding-left: 11px;
  }
}

.cant-act-flagged-post {
  padding: 0.5em;
  border: 1px dashed var(--primary-medium, $primary-medium);
  color: var(--primary, $primary);

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.assigned-to-user {
  display: flex;
  align-items: center;

  img.avatar {
    margin-right: 0.3em;
  }

  .unassign {
    margin-left: 0.5em;
  }
}

.topic-assigned-to {
  min-width: 15%;
  width: 15%;
}

.list-tags.assigned {
  margin-left: 5px;
}

.assign.modal-body .ember-text-field {
  width: 300px;
}
.assign.modal-body .ac-wrap {
  margin-top: 5px;
}

.assign-suggestions {
  height: 25px;
  margin-top: 15px;
  img {
    margin-right: 5px;
    cursor: pointer;
  }
}

.topic-list-item {
  .private-message-icon {
    margin-right: 5px;
  }
}

#topic-footer-button-assign {
  padding: 0 12px;

  .d-button-label {
    .avatar {
      margin-right: 0.25em;
    }
  }
}

// Group assigns sidebar nav

.group-assignments {
  // a little extra space for long names
  min-width: 250px;
  li a {
    display: grid;
    grid-template-areas: " avatar names count";
    grid-template-columns: auto 1fr auto;
    align-items: center;
    padding: 0.5em 13px;

    .assign-names {
      font-size: $font-down-1;
      grid-area: names;
      overflow: hidden;
    }
    .assign-name {
      @include ellipsis;
      margin-top: 3px;
    }
    .assign-username {
      font-weight: bold;
      @include ellipsis;
    }
    .assign-count {
      font-size: $font-up-2;
      grid-area: count;
    }
    .assign-image {
      grid-area: avatar;
      a {
        padding: 0;
        padding-right: 0.5em;
      }
    }
  }
  .search {
    height: 1em;
    width: 100%;
  }
  .search-div {
    padding: 0 13px;
  }
}

